contenedores y orden de los archivos

--- a/project1/dispatcher/Dockerfile
+++ b/project1/dispatcher/Dockerfile
@@ -1,14 +1,15 @@
-# Etapa de construcción
 FROM golang:1.21 as builder
 
 WORKDIR /app
 COPY . .
-RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o dispatcher .
+RUN CGO_ENABLED=0 GOOS=linux go build -o dispatcher .
 
-# Etapa final
 FROM alpine:latest
 WORKDIR /app
 COPY --from=builder /app/dispatcher .
-RUN ls -la && chmod +x dispatcher
 
-CMD ["./dispatcher"]
+# Instalar Docker CLI para poder crear contenedores
+RUN apk add --no-cache docker-cli
+
+EXPOSE 8080
+CMD ["./dispatcher", "--init-workers=3"]
