--- a/project1/server/Dockerfile
+++ b/project1/server/Dockerfile
@@ -8,8 +8,14 @@ FROM alpine:latest
 WORKDIR /app
 COPY --from=builder /app/server .
 
-# Instala curl para healthchecks
+# Instalar curl para healthchecks (opcional)
 RUN apk add --no-cache curl
 
 EXPOSE 8080
+
+# Variables de entorno para auto-registro
+ENV PORT=8080
+ENV DISPATCHER_URL=http://dispatcher:8080
+# HOSTNAME se inyecta automáticamente por Docker
+
 CMD ["./server"]
